--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -200,7 +200,7 @@
             android:layout_marginStart="0dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="0dp"
-            android:background="@color/colorPrimaryDark"
+            android:background="@color/btn"
             android:textColor="@color/white"
             android:text="@string/add_new_recipe" />
 
