--- a/app/src/main/res/layout/activity_search_recipe.xml
+++ b/app/src/main/res/layout/activity_search_recipe.xml
@@ -6,17 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchRecipeActivity"
-    android:background="@color/dark_gray">
+    android:background="@color/white">
 
     <AutoCompleteTextView
         android:id="@+id/autoIngredientName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="16dp"
         android:hint="@string/ingredient_name"
-        android:textColorHint="@color/hint_gray"
         android:textColor="@color/light_gray"
-        app:layout_constraintBottom_toTopOf="@+id/recipe_type"
+        android:textColorHint="@color/hint_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +24,7 @@
         android:id="@+id/recipe_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/table_scroll"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/autoIngredientName">
@@ -35,40 +34,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/meal_type"
-            android:textColor="@color/light_gray"/>
+            android:textColor="@color/darker_gray" />
 
         <CheckBox
             android:id="@+id/dessert_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/dessert_type"
-            android:textColor="@color/light_gray"/>
+            android:textColor="@color/darker_gray" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/table_scroll"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="306dp"
+        android:layout_height="320dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/buttons"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_type">
 
         <ScrollView
             android:id="@+id/scroll_view"
-            android:layout_height="220dp"
-            android:scrollbars="vertical"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
+            android:fillViewport="true"
             android:scrollbarStyle="outsideInset"
-            android:fillViewport="true">
+            android:scrollbars="vertical">
 
             <TableLayout
                 android:id="@+id/table_of_ingredients"
                 android:layout_width="300dp"
-                android:layout_height="wrap_content">
-            </TableLayout>
+                android:layout_height="wrap_content"></TableLayout>
         </ScrollView>
     </LinearLayout>
 
@@ -76,6 +74,8 @@
         android:id="@+id/buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,13 +85,18 @@
             android:id="@+id/clear_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/clear_button"/>
+            android:layout_marginRight="4dp"
+            android:background="@color/btn_light"
+            android:text="@string/clear_button"
+            android:textColor="@color/btn" />
 
         <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/search_button"/>
+            android:background="@color/btn"
+            android:text="@string/search_button"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
