More Improvements: colors, fonts, design, etc

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/vegetables_1"
+    android:background="@drawable/vegetables"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -87,5 +87,21 @@
         android:layout_marginStart="15dp"
         android:text="@string/photo_credit"
         android:textSize="10dp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="214dp"
+        android:fontFamily="@font/dancing_script_bold"
+        android:text="@string/app_name"
+        android:textSize="50sp"
+        android:textColor="@color/white"
+        android:shadowColor="@color/black"
+        android:shadowDx="3"
+        android:shadowDy="3"
+        android:shadowRadius="3"/>
 
 </RelativeLayout>
