--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/vegetables_1"
+    android:background="@drawable/vegetables"
     tools:context=".LoginActivity">
 
     <ImageView
@@ -22,7 +22,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        app:srcCompat="@drawable/petter_rabbit" />
+        app:srcCompat="@drawable/playstore_icon" />
 
     <EditText
         android:id="@+id/username_reg"
