--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -15,8 +15,8 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="28dp"
         android:text="Recipe Name"
-        android:textSize="22dp"
         android:textColor="@color/darker_gray"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/recipe_img_fl"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,8 +26,9 @@
         android:id="@+id/duration"
         android:layout_width="48dp"
         android:layout_height="20dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
         android:text="40 min"
         android:textColor="@color/darker_gray"
         app:layout_constraintEnd_toStartOf="@+id/portion_icon"
@@ -39,8 +40,8 @@
         android:id="@+id/portion"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
+        android:layout_marginEnd="188dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="144dp"
         android:text="20 por"
         android:textColor="@color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +62,7 @@
         android:id="@+id/portion_icon"
         android:layout_width="20dp"
         android:layout_height="20dp"
+        android:layout_marginEnd="2dp"
         android:layout_marginTop="8dp"
         android:adjustViewBounds="false"
         app:layout_constraintEnd_toStartOf="@+id/portion"
