--- a/app/src/main/res/layout/activity_recipes.xml
+++ b/app/src/main/res/layout/activity_recipes.xml
@@ -19,8 +19,7 @@
             android:id="@+id/recipes_page_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@color/dark_gray">
+            android:layout_gravity="top">
         </android.support.v4.view.PagerTabStrip>
 
     </android.support.v4.view.ViewPager>
